changed events.html to events/ and events/index.html

--- a/test.html
+++ b/test.html
@@ -16,7 +16,7 @@
 	<link rel="stylesheet" href="css/animated-bg.css"> <!-- Resource style -->
 	<script src="js/modernizr.js"></script> <!-- Modernizr -->
   	
-	<title>Elegance Portfolio Template</title>
+	<title>YouCAN Corvallis Home</title>
 </head>
 <body>
 	<header class="cd-header">
@@ -31,17 +31,17 @@
 		<ul class="cd-primary-nav">
 			<li class="cd-label">Who</li>
 
-			<li><a href="about.html">About Us</a></li>
-			<li><a href="blog.html">Blog</a></li>
+			<li><a href="about">About Us</a></li>
+			<li><a href="blog">Blog</a></li>
 
 			<li class="cd-label">What</li>
 
-			<li><a href="events.html">Events</a></li>
-			<li><a href="get-involved.html">Get Involved</a></li>
+			<li><a href="events">Events</a></li>
+			<li><a href="get-involved">Get Involved</a></li>
 
 			<li class="cd-label">Where</li>
 
-			<li><a href="contact.html">Contact Us</a></li>
+			<li><a href="contact">Contact Us</a></li>
 
 			<li class="cd-label">Follow us</li>
 			
@@ -51,13 +51,12 @@
 			<li class="cd-social cd-twitter"><a href="https://twitter.com/YouCANCorvallis">Twitter</a></li>
 		</ul>
 	</nav>
-
-
-				<div id="large-header" class="large-header">
-					<canvas id="demo-canvas"></canvas>
-                    <h1 class="main-title">Young people have the power to save the planet...</h1>
-                    <!-- <h1 class="main-title">Because there is no <i>second</i> <font color=rgb(155,100,55)>Earth</font></span></h1>-->
-				</div>
+    
+    <div id="large-header" class="large-header">
+        <canvas id="demo-canvas"></canvas>
+        <h1 class="main-title">Young people have the power to save the planet...</h1>
+        <!-- <h1 class="main-title">Because there is no <i>second</i> <font color=rgb(155,100,55)>Earth</font></span></h1>-->
+    </div>
 
 
 
@@ -84,6 +83,7 @@
 		<div class="cd-container-more-about">
 			<div class="row">
 				<a href="#"><div class="cd-container-clmn-1">
+                    <h3 class="cd-container-clmn-text"></h3>
 				</div></a>
 				<a href="#"><div class="cd-container-clmn-2">
 				</div></a>
