--- a/events/index.html
+++ b/events/index.html
@@ -8,12 +8,12 @@
 
 	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700' rel='stylesheet' type='text/css'>
 
-	<link rel="stylesheet" href="css/reset.css"> <!-- CSS reset -->
-	<link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
-	<link rel="stylesheet" href="css/component.css"> <!-- Resource style -->
+	<link rel="stylesheet" href="../css/reset.css"> <!-- CSS reset -->
+	<link rel="stylesheet" href="../css/style.css"> <!-- Resource style -->
+	<link rel="stylesheet" href="../css/component.css"> <!-- Resource style -->
 	<script src="js/modernizr.js"></script> <!-- Modernizr -->
   	
-	<title>Elegance Portfolio Template</title>
+	<title>Events</title>
 </head>
 	<header class="cd-header">
 		<div class="cd-logo"><a href="#0"><img src="http://static.tumblr.com/1ccbc9v/0Nlnbwlt4/logo-elegant.png" alt="Logo"></a></div>
