copied menu/logo/footer, changed js and css to ../js & ../css,  to all files

--- a/events/index.html
+++ b/events/index.html
@@ -11,40 +11,39 @@
 	<link rel="stylesheet" href="../css/reset.css"> <!-- CSS reset -->
 	<link rel="stylesheet" href="../css/style.css"> <!-- Resource style -->
 	<link rel="stylesheet" href="../css/component.css"> <!-- Resource style -->
-	<script src="js/modernizr.js"></script> <!-- Modernizr -->
+	<script src="../js/modernizr.js"></script> <!-- Modernizr -->
   	
-	<title>Events</title>
+		<title>YouCAN Corvallis | Events</title>
 </head>
+<body>
 	<header class="cd-header">
-		<div class="cd-logo"><a href="#0"><img src="http://static.tumblr.com/1ccbc9v/0Nlnbwlt4/logo-elegant.png" alt="Logo"></a></div>
+		<div class="cd-logo"><a href="#"><img src="https://docs.google.com/drawings/d/1M2wqWCpQ2FT3jGgM7zGs4tx4LOZO7H_FmivvNyLzB0E/pub?w=1441&h=230" alt="Logo"></a></div>
 
 		<a class="cd-primary-nav-trigger" href="#0">
 			<span class="cd-menu-text">Menu</span><span class="cd-menu-icon"></span>
-		</a> <!-- cd-primary-nav-trigger -->
+		</a> 
 	</header>
 
 	<nav>
 		<ul class="cd-primary-nav">
 			<li class="cd-label">Who</li>
 
-			<li><a href="#0">About Us</a></li>
-			<li><a href="#0">Blog</a></li>
+			<li><a href="../about">About Us</a></li>
+			<li><a href="../blog">Blog</a></li>
 
 			<li class="cd-label">What</li>
 
-			<li><a href="#0">See Our Projects</a></li>
-			<li><a href="#0">Project Page</a></li>
+			<li><a href="#0">Events</a></li>
+			<li><a href="../get-involved">Get Involved</a></li>
 
 			<li class="cd-label">Where</li>
 
-			<li><a href="#0">Contact Us</a></li>
+			<li><a href="../contact">Contact Us</a></li>
 
 			<li class="cd-label">Follow us</li>
 			
-			<li class="cd-social cd-facebook"><a href="#0">Facebook</a></li>
-			<li class="cd-social cd-instagram"><a href="#0">Instagram</a></li>
-			<li class="cd-social cd-dribbble"><a href="#0">Dribbble</a></li>
-			<li class="cd-social cd-twitter"><a href="#0">Twitter</a></li>
+			<li class="cd-social cd-facebook"><a href="https://www.facebook.com/groups/455769807934340/">Facebook</a></li>
+			<li class="cd-social cd-twitter"><a href="https://twitter.com/YouCANCorvallis">Twitter</a></li>
 		</ul>
 	</nav>
 
@@ -118,8 +117,8 @@
 
 		<div class="footer">
 			<div class="footer-content">
-					<div class="footer-clmn1">© 2014 Designed and Developed by <a href="http://diogodantas.com">Diogo Dantas</a></div>
-					<div class="footer-clmn2">Email: <a href="mailto:imdiogodantas@gmail.com">imdiogodantas@gmail.com</a></div>
+				<div class="footer-clmn1">©2016 Updated by Aaron Kratzer</div>
+				<div class="footer-clmn2">Email: <a href="mailto:aaronckratzer@gmail.com">AaronCKratzer@gmail.com</a></div>
 			</div>
 		</div>
 		
@@ -127,8 +126,8 @@
 
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<script src="js/jquery-2.1.1.js"></script>
-<script src="js/main.js"></script> <!-- Resource jQuery -->
+<script src="../js/jquery-2.1.1.js"></script>
+<script src="../js/main.js"></script> <!-- Resource jQuery -->
 
 <!-- Script for smooth scrolling -->
 <script>
