--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 	<header class="cd-header">
-		<div class="cd-logo"><a href="#0"><img src="http://static.tumblr.com/1ccbc9v/0Nlnbwlt4/logo-elegant.png" alt="Logo"></a></div>
+		<div class="cd-logo"><a href="#"><img src="https://docs.google.com/drawings/d/1M2wqWCpQ2FT3jGgM7zGs4tx4LOZO7H_FmivvNyLzB0E/pub?w=1441&h=230" alt="Logo"></a></div>
 
 		<a class="cd-primary-nav-trigger" href="#0">
 			<span class="cd-menu-text">Menu</span><span class="cd-menu-icon"></span>
@@ -31,33 +31,32 @@
 		<ul class="cd-primary-nav">
 			<li class="cd-label">Who</li>
 
-			<li><a href="about.html">About Us</a></li>
-			<li><a href="#0">Blog</a></li>
+			<li><a href="about">About Us</a></li>
+			<li><a href="blog">Blog</a></li>
 
 			<li class="cd-label">What</li>
 
-			<li><a href="#0">Get Involved</a></li>
-			<li><a href="#0">Events</a></li>
+			<li><a href="events">Events</a></li>
+			<li><a href="get-involved">Get Involved</a></li>
 
 			<li class="cd-label">Where</li>
 
-			<li><a href="#0">Contact Us</a></li>
+			<li><a href="contact">Contact Us</a></li>
 
 			<li class="cd-label">Follow us</li>
 			
 			<li class="cd-social cd-facebook"><a href="https://www.facebook.com/groups/455769807934340/">Facebook</a></li>
-			<li class="cd-social cd-instagram"><a href="test.html">Instagram</a></li>
-			<li class="cd-social cd-dribbble"><a href="#0">Dribbble</a></li>
+			<!--<li class="cd-social cd-instagram"><a href="#0">Instagram</a></li>
+			<li class="cd-social cd-dribbble"><a href="#0">Dribbble</a></li>-->
 			<li class="cd-social cd-twitter"><a href="https://twitter.com/YouCANCorvallis">Twitter</a></li>
 		</ul>
 	</nav>
-
-
-				<div id="large-header" class="large-header">
-					<canvas id="demo-canvas"></canvas>
-                    <h1 class="main-title">The sun is setting, it's time to act...</h1>
-                    <!-- <h1 class="main-title">Because there is no <i>second</i> <font color=rgb(155,100,55)>Earth</font></span></h1>-->
-				</div>
+    
+    <div id="large-header" class="large-header">
+        <canvas id="demo-canvas"></canvas>
+        <h1 class="main-title">Young people have the power to save the planet...</h1>
+        <!-- <h1 class="main-title">Because there is no <i>second</i> <font color=rgb(155,100,55)>Earth</font></span></h1>-->
+    </div>
 
 
 
@@ -68,10 +67,10 @@
 	<main id="more" class="cd-main-content" style="margin-top: 8rem;">
 		<div class="cd-container">
 			<h4 style="color: rgb(212,175,55);">Youth Climate Action Now</h4>
-			<h1>So share your voice with the world!</h1>
-			<p>As youth, our voice is underrepresented and under asked for in politcs and every other area of society. Yet, voices of youth continue to to be the most powerful and represent the most ambitous generation yet. As youth, it is our responsibility to show the world that we care about the climate and that they should too. Youth Climate Action Now (YouCAN) Corvallis is a campaign that involves youth in policy making and climate activism--leveraging our talents, enthusiasm, and love for the world to shape policy decisions on a local, county, and state level. </p>
+			<h1>Share your voice with the world!</h1>
+			<p>As youth, our voice is underrepresented and under requested in politcs and every other area of society. Yet, voices of youth continue to to be the most powerful and represent the most ambitous generation yet. It is our responsibility to show the world that we care about the climate and that they should too. Youth Climate Action Now (YouCAN) Corvallis is a campaign that involves youth in policy making and climate activism--leveraging our talents, enthusiasm, and love for the world to shape policy decisions on a local, county, and state level. </p>
 			
-			<a href="about.html"><div class="read-more-btn">Read More About YouCAN Corvallis</div></a>
+			<a href="about.html"><div class="read-more-btn">Read More About <br>YouCAN Corvallis</div></a>
 		</div>
 
 
@@ -84,6 +83,7 @@
 		<div class="cd-container-more-about">
 			<div class="row">
 				<a href="#"><div class="cd-container-clmn-1">
+                    <h3 class="cd-container-clmn-text"></h3>
 				</div></a>
 				<a href="#"><div class="cd-container-clmn-2">
 				</div></a>
@@ -119,7 +119,7 @@
 					<div class="cd-container-people-info">
 						<h4>Co-Chair</h4>
 						<h2>Debra Higbee-Sudyka</h2>
-						<p>The Chair of the Corvallis Environmental Action Team of the Seirra Club, Debra has experience in local and state policy making. As the main proponent of the Plastic Bag Ban, she has made fundemental change in our community.</p>
+						<p>The Chair of the Corvallis Environmental Action Team of the Sierra Club, Debra has experience in local and state policy making. As the main proponent of the Plastic Bag Ban, she has made fundamental change in our community.</p>
 					</div>
 				</div>
 				<div class="cd-container-people-clmn-2">
@@ -135,7 +135,7 @@
 					<div class="cd-container-people-info">
 						<h4>Outreach Coordinator</h4>
 						<h2>Sierra Laverty</h2>
-						<p>Being from Idaho and growing up surrounded by activits, organizing for positive change in the community comes natural for Sierra. Ultimately, her goal is to help implament sustainable agriculture around the country, and talking to local goverments is a great way to start!</p>
+						<p>As a sixth generation Idahoan with a family history of both ranching and conservation, Sierra was raised to be a steward of the land. She brings three years of outreach experience to her current role at YouCAN, and is ecstatic to contribute to the Corvallis community by amplifying the voices of youth and young adults.</p>
 					</div>
 				</div>
 			</div>
@@ -157,7 +157,7 @@
 					<div class="cd-container-blog-info">
 						<h4>2 February 2016</h4>
 						<h2>Tell the world!</h2>
-						<p>The City has a group that is worling on climate issues in Corvallis--the Climate Action Task Force (CATF). The YouCAN Corvallis leadership team testified at the CATF meeting about the necessity of legally-binding, science-based emissions reduction targets. Afterward, we got positive feedback from many people in the room, and we plan on coming back often to provide a youth-focused perspective on the task force's work.</p>
+						<p>The City of Corvallis has formed a group that is working on local climate issues--the Climate Action Task Force (CATF). The YouCAN Corvallis leadership team testified at the CATF meeting about the necessity of legally-binding, science-based emissions reduction targets. Afterward we received positive feedback from many people in the room, and we plan on returning often to these meetings to provide a youth-focused perspective on the CATF's work.</p>
 						<a href="#"><div class="read-more-btn-small">Read</div></a>
 					</div>
 				</div>		
@@ -165,7 +165,7 @@
 		</div>
 		
 			<div class="cd-container-blog-read-posts">
-				<a href="#"><div class="read-more-posts-btn">More From Our Blog</div></a>
+				<a href="blog.html"><div class="read-more-posts-btn">More From Our Blog</div></a>
 			</div>
 			
 
@@ -239,8 +239,14 @@
 		
 		<div class="footer">
 			<div class="footer-content">
-					<div class="footer-clmn1">© 2014 Designed and Developed by <a href="http://diogodantas.com">Diogo Dantas</a></div>
-					<div class="footer-clmn2">Email: <a href="mailto:imdiogodantas@gmail.com">imdiogodantas@gmail.com</a></div>
+				<div class="footer-clmn1">
+                    <!--©2014 Developed by <a href="http://diogodantas.com">Diogo Dantas</a><br><br>-->
+                    ©2016 Updated by Aaron Kratzer
+                </div>
+				<div class="footer-clmn2">
+                    <!--Email: <a href="mailto:imdiogodantas@gmail.com">imdiogodantas@gmail.com</a><br><br>-->
+                    Email: <a href="mailto:aaronckratzer@gmail.com">AaronCKratzer@gmail.com</a>
+                </div>
 			</div>
 		</div>
 		
