added link to home to logo

--- a/about/index.html
+++ b/about/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 	<header class="cd-header">
-		<div class="cd-logo"><a href="#"><img src="https://docs.google.com/drawings/d/1M2wqWCpQ2FT3jGgM7zGs4tx4LOZO7H_FmivvNyLzB0E/pub?w=1441&h=230" alt="Logo"></a></div>
+		<div class="cd-logo"><a href="../"><img src="https://docs.google.com/drawings/d/1M2wqWCpQ2FT3jGgM7zGs4tx4LOZO7H_FmivvNyLzB0E/pub?w=1441&h=230" alt="Logo"></a></div>
 
 		<a class="cd-primary-nav-trigger" href="#0">
 			<span class="cd-menu-text">Menu</span><span class="cd-menu-icon"></span>
