Adding logo to img/

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     
     <div id="large-header" class="large-header">
         <canvas id="demo-canvas"></canvas>
-        <h1 class="main-title">Young people have the power to save the planet...</h1>
+        <h1 class="main-title">Young people have the power...</h1>
         <!-- <h1 class="main-title">Because there is no <i>second</i> <font color=rgb(155,100,55)>Earth</font></span></h1>-->
     </div>
 
