added pictures to pic-menu and events/speak-out/

--- a/events/speak-out/index.html
+++ b/events/speak-out/index.html
@@ -87,8 +87,9 @@
 				<a href="#"><div class="cd-container-project-clmn-3-img"></div></a>
 				<a href="#"><div class="cd-container-project-clmn-4-img"></div></a>
 				<a href="#"><div class="cd-container-project-clmn-5-img"></div></a>
+            <!--
 				<a href="#"><div class="cd-container-project-clmn-6-img"></div></a>
-				<a href="#"><div class="cd-container-project-clmn-7-img"></div></a>
+				<a href="#"><div class="cd-container-project-clmn-7-img"></div></a>-->
 		</div>
 		
 		</div>
