added small button link from events>speak-out page

--- a/events/index.html
+++ b/events/index.html
@@ -69,7 +69,7 @@
 						<h4>Corvallis Public Library</h4>
 						<h2>Youth Climate Speak Out</h2>
 						<p>We want to hear what youth have to say! How are they addressing climate change, and what direction should we take this movement? Youth representatives of different high schools from Corvallis, Eugene, Albany and Portland have been invited to speak to the community at the Corvallis Public Library meeting hall.</p>
-                        <p>
+                        <a href="./speak-out/"><div class="read-more-btn-small"><center>Read More</center></div></a>
 					</div>
 				</div>
 				<div class="cd-container-people-clmn-2">
