added footer to /events/speak-out/

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 <!-- Section 1.b (Ways to get invovled) -->
 		<div class="cd-container" style="margin-top: 10rem;">
 			<h4 style="color: rgb(212,175,55);">Ways to get involved</h4>
-			<h1>What would you want to do?</h1>
+			<h1>Where can you see yourself?</h1>
 		</div>	
 				
 		<div class="cd-container-more-about">
