--- a/events/speak-out/index.html
+++ b/events/speak-out/index.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" href="../../css/component.css"> <!-- Resource style -->
 	<script src="../../js/modernizr.js"></script> <!-- Modernizr -->
   	
-	<title>YouCAN Corvallis | Home</title>
+	<title>YouCAN Corvallis | Events > Speak-Out</title>
 </head>
 <body>
 	<header class="cd-header">
@@ -112,8 +112,8 @@
 
 		<div class="footer">
 			<div class="footer-content">
-					<div class="footer-clmn1">© 2014 Designed and Developed by <a href="http://diogodantas.com">Diogo Dantas</a></div>
-					<div class="footer-clmn2">Email: <a href="mailto:imdiogodantas@gmail.com">imdiogodantas@gmail.com</a></div>
+				<div class="footer-clmn1">©2016 Updated by Aaron Kratzer</div>
+				<div class="footer-clmn2">Email: <a href="mailto:aaronckratzer@gmail.com">AaronCKratzer@gmail.com</a></div>
 			</div>
 		</div>
 		
