added share buttons to bottom of /speak-out/

--- a/events/speak-out/index.html
+++ b/events/speak-out/index.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" href="../../css/component.css"> <!-- Resource style -->
 	<script src="../../js/modernizr.js"></script> <!-- Modernizr -->
   	
-	<title>YouCAN Corvallis | Events > Speak-Out</title>
+	<title>YouCAN Corvallis | Youth Climate Speak-Out</title>
 </head>
 <body>
 	<header class="cd-header">
@@ -99,11 +99,11 @@
 		<!-- Share Buttons -->
 		<div class="share-project">
 			<div class="share-project-content">
-				<div class="share-btn"><a href='http://www.facebook.com/share.php?u=http://diogodantas.com'><div class="facebook-share">Facebook</div></a></div>
+				<div class="share-btn"><a href='http://www.facebook.com/share.php?u=http://youcancorvallis.com/events/speak-out/'><div class="facebook-share">Facebook</div></a></div>
 				
 				<div class="share-btn"><a href='http://twitter.com/share'><div class="twitter-share">Twitter</div></a></div>
 				
-				<div class="share-btn"><a href='http://www.facebook.com/share.php?u=http://diogodantas.com'><div class="google-share">Google+</div></a></div>
+				<div class="share-btn"><a href='http://www.facebook.com/share.php?u=http://youcancorvallis.com/events/speak-out/'><div class="google-share">Google+</div></a></div>
 			</div>
 		</div>
 		
