changed time of speakout to 7:30pm:

--- a/events/speak-out/index.html
+++ b/events/speak-out/index.html
@@ -59,22 +59,30 @@
 		<div id="speakout-info" class="cd-container-project-clmn-1">
             <h1>Youth Climate Speak-Out!</h1>
             <p>
-                When: 6:00pm-7:30pm, Thursday, May 26th (Eco-Tabling starts at 5:30pm)<br>
+                When: 7:30-8:45pm, Thursday, May 26th (Eco-Tabling starts at 7pm)<br>
                 <b>Where:</b> Corvallis Benton-County Public Library Meeting Room
             </p>
           
-			<p>What’s all the fuss?<br>
-                Youth Panel: YouCAN Corvallis and our partners is inviting a panel of youth representatives ages 12-25 from Corvallis, Eugene, Albany and Portland to speak to the community at the Corvallis Public Library meeting hall. <br><br>
-                Youth Testimony: All young people ages 5-25 are invited to provide up to 5 minutes of testimony about their opinions, hopes, fears, and ideas about climate change.<br><br>
-                Q&A: A question and answer session will held afterwards for youth only to ask one another questions centered on climate change.<br><br>
+			<h2>What’s all the fuss?</h2>
+                <p>
+                Youth Panel: YouCAN Corvallis and our partners is inviting a panel of youth representatives ages 12-25 from Corvallis, Eugene, Albany and Portland to speak to the community at the Corvallis Public Library meeting hall. 
+                <br><br>
+                Open Mic: After the panel, all young people are invited to speak out about their opinions, hopes, fears, and ideas about climate change.
+                <br><br>
+                Q&A: A question and answer session will be held afterwards for youth only to ask one another questions centered on climate change.
+                <br><br>
                 What is YouCAN Corvallis?<br>
-                YouCAN (Youth Climate Action Now) is a collaborative campaign by the Oregon Sierra Club and Our Children’s Trust, and is dedicated to amplifying voices of youth in the climate conversation.<br><br>
+                YouCAN (Youth Climate Action Now) is a collaborative campaign by the Oregon Sierra Club and Our Children’s Trust, and is dedicated to amplifying voices of youth in the climate conversation.
+                <br><br>
                 Who’s Invited?<br>
-                Members of the Corvallis City Council, the mayor's office, state district senators and representatives, local media outlets, friends and family of speakers and the Corvallis community are invited to hear the students speak.<br><br>
+                Members of the Corvallis City Council, the mayor's office, state district senators and representatives, local media outlets, friends and family of speakers and the Corvallis community are invited to hear the students speak.
+                <br><br>
                 Eco-Tabling<br>
-                Our local environmental partners are invited to table inside and outside the Meeting Hall the 30 minutes prior to the Speak-Out (5:30pm-6:00pm).<br><br>
+                Our local environmental partners are invited to table inside and outside the Meeting Hall the 30 minutes prior to the Speak-Out (7-7:30pm).
+                <br><br>
                 Keynote Speakers<br>
-                At 6:00pm our youth keynote speaker will begin with their history of youth climate activism.<br><br>
+                At 7:30pm our youth keynote speaker will begin with their history of youth climate activism.
+                <br><br>
                 Q&A Session<br>
                 There will be a Q&A at the end of the panelists' presentations, for youth to ask questions or add comments.<br> <br>
 			</p>
