new pic for about, blog under construction

--- a/events/index.html
+++ b/events/index.html
@@ -68,6 +68,7 @@
 					<div class="cd-container-people-info">
 						<h4>Corvallis Public Library</h4>
 						<h2>Youth Climate Speak Out</h2>
+                        <p>May 26th, 7:30pm</p>
 						<p>We want to hear what youth have to say! How are they addressing climate change, and what direction should we take this movement? Youth representatives of different high schools from Corvallis, Eugene, Albany and Portland have been invited to speak to the community at the Corvallis Public Library meeting hall.</p>
                         <a href="./speak-out/"><div class="read-more-btn-small"><center>Read More</center></div></a>
 					</div>
@@ -77,6 +78,7 @@
 					<div class="cd-container-people-info">
 						<h4>New Morning Bakery</h4>
 						<h2>YouCAN Meetings</h2>
+                        <p>First Tuesday of each month.</p>
 						<p>See what we're up to, who we are, and the inner workings of the campaign--join our team for one of our monthly meetings! We cover campaign missions, outreach, event planning, and political engagement at each meeting. We encourage newcomers, and please ask questions. We enjoy having a new perspective to ask foundational questions--it keeps us open and honest.</p>
 					</div>
 				</div>		
@@ -85,7 +87,13 @@
                     <div class="cd-container-people-info">
 						<h4>Interzone & Old World Deli</h4>
 						<h2>Green Socials</h2>
+                        <p>Every 2nd & 4th Tuesday at 7pm</p>
 						<p>Join us for a social evening to meet others interested in environmental issues. This is a recurring social event where activists and people interested in change can network, make new friends, enjoy company of old friends, and discuss interesting ideas.  We will provide general topics to help initiate conversations, but this event is about getting social!</p>
+                        <p>
+                            <u>2nd Tuesday @ 7pm</u><br>Interzone on Monroe
+                            <br>
+                            <u>4th Tuesday @ 7pm</u><br>Old World Deli on 2nd
+                        </p>
 					</div>
 				</div>
 			</div>
