--- a/events/speak-out/index.html
+++ b/events/speak-out/index.html
@@ -64,7 +64,9 @@
             </p>
           
 			<h2>What’s all the fuss?</h2>
-                <p>
+                <br><p>
+                This speak out is to bring together youth voices from around the area to share their thoughts on climate change. We are inviting elected officals to the event, but most importantly, there will be other youth there to hear your opinions and hopes for a better world. Together, we can help our generation feel empowered to act on climate change!
+                <br><br>
                 Youth Panel: YouCAN Corvallis and our partners is inviting a panel of youth representatives ages 12-25 from Corvallis, Eugene, Albany and Portland to speak to the community at the Corvallis Public Library meeting hall. 
                 <br><br>
                 Open Mic: After the panel, all young people are invited to speak out about their opinions, hopes, fears, and ideas about climate change.
