--- a/events/index.html
+++ b/events/index.html
@@ -4,14 +4,14 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link rel="shortcut icon" href="http://static.tumblr.com/1ccbc9v/sCFnc0fp4/apple-touch-icon-72x72.png">
+	<link rel="shortcut icon" href="../static/img/apple-touch-icon-72x72.png">
 
 	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700' rel='stylesheet' type='text/css'>
 
-	<link rel="stylesheet" href="../css/reset.css"> <!-- CSS reset -->
-	<link rel="stylesheet" href="../css/style.css"> <!-- Resource style -->
-	<link rel="stylesheet" href="../css/component.css"> <!-- Resource style -->
-	<script src="../js/modernizr.js"></script> <!-- Modernizr -->
+	<link rel="stylesheet" href="../static/css/reset.css"> <!-- CSS reset -->
+	<link rel="stylesheet" href="../static/css/style.css"> <!-- Resource style -->
+	<link rel="stylesheet" href="../static/css/component.css"> <!-- Resource style -->
+	<script src="../static/js/modernizr.js"></script> <!-- Modernizr -->
   	
 		<title>YouCAN Corvallis | Events</title>
 </head>
@@ -134,8 +134,8 @@
 
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<script src="../js/jquery-2.1.1.js"></script>
-<script src="../js/main.js"></script> <!-- Resource jQuery -->
+<script src="../static/js/jquery-2.1.1.js"></script>
+<script src="../static/js/main.js"></script> <!-- Resource jQuery -->
 
 <!-- Script for smooth scrolling -->
 <script>
