--- a/get-involved/index.html
+++ b/get-involved/index.html
@@ -4,16 +4,16 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link rel="shortcut icon" href="http://static.tumblr.com/1ccbc9v/sCFnc0fp4/apple-touch-icon-72x72.png">
+	<link rel="shortcut icon" href="../static/img/apple-touch-icon-72x72.png">
 	
 	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Playfair+Display:400,700' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
 
-	<link rel="stylesheet" href="../css/reset.css"> <!-- CSS reset -->
-	<link rel="stylesheet" href="../css/style.css"> <!-- Resource style -->
-	<link rel="stylesheet" href="../css/component.css"> <!-- Resource style -->
-	<script src="../js/modernizr.js"></script> <!-- Modernizr -->
+	<link rel="stylesheet" href="../static/css/reset.css"> <!-- CSS reset -->
+	<link rel="stylesheet" href="../static/css/style.css"> <!-- Resource style -->
+	<link rel="stylesheet" href="../static/css/component.css"> <!-- Resource style -->
+	<script src="../static/js/modernizr.js"></script> <!-- Modernizr -->
   	
 		<title>YouCAN Corvallis | Get Involved</title>
 </head>
@@ -177,14 +177,14 @@
 
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<script src="../js/jquery-2.1.1.js"></script>
-<script src="../js/main.js"></script> <!-- Resource jQuery -->
+<script src="../static/js/jquery-2.1.1.js"></script>
+<script src="../static/js/main.js"></script> <!-- Resource jQuery -->
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD5wGdqrTcgLdOPzMbASsbiHkloxc6v2rE"></script>
 
-		<script src="../js/TweenLite.min.js"></script>
-		<script src="../js/EasePack.min.js"></script>
-		<script src="../js/rAF.js"></script>
-		<script src="../js/demo-1.js"></script>
+		<script src="../static/js/TweenLite.min.js"></script>
+		<script src="../static/js/EasePack.min.js"></script>
+		<script src="../static/js/rAF.js"></script>
+		<script src="../static/js/demo-1.js"></script>
 
 <!-- Script for smooth scrolling -->
 <script>
