Updates the ordinance

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <div>
                     <h2>Corvallis GHG Reduction Ordinance</h2>
                     <p>A GHG reduction ordinance is the next step to ensure and support the Corvallis Climate Action Plan.</p>
-                    <a href="/static/files/corvallis_climate_recovery_ordinance_draft_12_4_16.pdf"><div class="read-more-btn">See the draft text here</div></a>
+                    <a href="/static/files/CorvallisClimateRecoveryOrdinancedraft2.15.17.pdf"><div class="read-more-btn">See the draft text here</div></a>
                 </div>
 
                 <div>
