Updates the intro

--- a/index.html
+++ b/index.html
@@ -62,9 +62,17 @@
 
 		<!-- Section 1.a (Why Youth) -->
 		<div class="cd-container">
-			<h1 style="color: rgb(212,175,55);">Youth Climate Action Now</h1>
+			<h1 style="color: rgb(212,175,55);">Climate Action Now</h1>
 			<h4>Share your voice with the world!</h4>
-			<p>As youth, our voice is underrepresented and under requested in politcs and every other area of society. Yet, voices of youth continue to to be the most powerful and represent the most ambitous generation yet. It is our responsibility to show the world that we care about the climate and that they should too. Youth Climate Action Now (YouCAN) Corvallis is a campaign that involves youth in policy making and climate activism--leveraging our talents, enthusiasm, and love for the world to shape policy decisions on a local, county, and state level. </p>
+			<p>
+				Your voice is needed now!  It is our responsibility to show our political representatives, and the world, that we care about climate change and that they should too.
+                The Climate Action Now campaign is a collaboration between the Sierra Club and Our Children’s Trust (Youth Climate Action Now—YouCAN).  The campaign involves an intergenerational effort in policy making and climate activism--leveraging everyone’s talents, enthusiasm, and love for the world to shape policy decisions on a local, county, and state level.
+                The YouCAN campaign involves youth, whose voice is underrepresented and under requested in politics. Yet, voices of youth continue to be the most powerful and represent the most ambitious generation yet.
+			</p>
+
+            <img src="static/img/sierra_club.gif"/>
+            <img src="static/img/our_childrens_trust.jpg"/>
+            <br/>
 
 			<a href="/about"><div class="read-more-btn">Read More About <br>YouCAN Corvallis</div></a>
 		</div>
