Updates the header image

--- a/index.html
+++ b/index.html
@@ -131,16 +131,16 @@
                 <ul style="list-style: circle; margin-left: 20px;
                 margin-top: 20px; text-align: left;">
                     <li style="padding: 5px;">
-                        <a href="static/files/CRO%20Primer.pdf">Primer</a>
+                        <a href="static/files/CRO%20Primer.pdf" target="_blank">Primer</a>
                     </li>
                     <li style="padding: 5px;">
-                        <a href="static/files/FAQ%20about%20Corvallis's%20GHG%20reduction%20Ordinance.pdf">FAQ</a>
+                        <a href="static/files/FAQ%20about%20Corvallis's%20GHG%20reduction%20Ordinance.pdf" target="_blank">FAQ</a>
                     </li>
                     <li style="padding: 5px;">
-                        <a href="static/files/Background%20-%20Corvallis%20Climate%20Recovery%20Ordinance.pdf">Background</a>
+                        <a href="static/files/Background%20-%20Corvallis%20Climate%20Recovery%20Ordinance.pdf" target="_blank">Background</a>
                     </li>
                     <li style="padding: 5px;">
-                        <a href="static/files/A%20Climate%20Recovery%20Ordinance%20-%20Good%20for%20Corvallis%20Businesses.pdf">Good for Corvallis</a>
+                        <a href="static/files/A%20Climate%20Recovery%20Ordinance%20-%20Good%20for%20Corvallis%20Businesses.pdf" target="_blank">Good for Corvallis</a>
                     </li>
 
                 </ul>
