--- a/index.html
+++ b/index.html
@@ -131,16 +131,20 @@
                 <ul style="list-style: circle; margin-left: 20px;
                 margin-top: 20px; text-align: left;">
                     <li style="padding: 5px;">
-                        <a href="static/files/CRO%20Primer.pdf" target="_blank">Primer</a>
+                        <a href="static/files/CRO%20Primer.pdf"
+                           target="_blank">Primer</a>
                     </li>
                     <li style="padding: 5px;">
-                        <a href="static/files/FAQ%20about%20Corvallis's%20GHG%20reduction%20Ordinance.pdf" target="_blank">FAQ</a>
+                        <a href="static/files/FAQ%20about%20Corvallis's%20GHG%20reduction%20Ordinance.pdf"
+                           target="_blank">FAQ</a>
                     </li>
                     <li style="padding: 5px;">
-                        <a href="static/files/Background%20-%20Corvallis%20Climate%20Recovery%20Ordinance.pdf" target="_blank">Background</a>
+                        <a href="static/files/Background%20-%20Corvallis%20Climate%20Recovery%20Ordinance.pdf"
+                           target="_blank">Background</a>
                     </li>
                     <li style="padding: 5px;">
-                        <a href="static/files/A%20Climate%20Recovery%20Ordinance%20-%20Good%20for%20Corvallis%20Businesses.pdf" target="_blank">Good for Corvallis</a>
+                        <a href="static/files/A%20Climate%20Recovery%20Ordinance%20-%20Good%20for%20Corvallis%20Businesses.pdf"
+                           target="_blank">Good for Corvallis</a>
                     </li>
 
                 </ul>
@@ -245,6 +249,29 @@
                         institutional planning for Colleges in the United
                         States.
                     </p>
+                </div>
+            </div>
+            <div class="cd-container-people-clmn-1">
+                <img src="static/img/greg_mckenzie.jpg">
+                <div class="cd-container-people-info">
+                    <h2>Greg McKenzie</h2>
+                    <p>
+                        Greg McKenzie is a video producer, writer, and social
+                        change activist. He has a BA in Speech Communication
+                        with an emphasis on persuasion and mass media.
+                    </p>
+                </div>
+            </div>
+            <div class="cd-container-people-clmn-2">
+                <img src="static/img/suzanne_lazaro.jpg">
+                <div class="cd-container-people-info">
+                    <h2>Suzanne Lazaro</h2>
+                </div>
+            </div>
+            <div class="cd-container-people-clmn-3">
+                <img src="static/img/rob_hess.jpg">
+                <div class="cd-container-people-info">
+                    <h2>Rob Hess</h2>
                 </div>
             </div>
         </div>
