Updates contact info on all pages

--- a/about/index.html
+++ b/about/index.html
@@ -112,10 +112,8 @@
 -->
 		<!-- Section 3 (Footer) -->		
 
-		<div class="footer">
+		<div class="footer" style="display: none;">
 			<div class="footer-content">
-				<div class="footer-clmn1">©2016 Updated by Aaron Kratzer</div>
-				<div class="footer-clmn2">Email: <a href="mailto:aaronckratzer@gmail.com">AaronCKratzer@gmail.com</a></div>
 			</div>
 		</div>
 		
