--- a/index.html
+++ b/index.html
@@ -352,11 +352,9 @@
                 </div>
                 <div class="contact-2">
                     <div class="contact-clmn-content">
-                        <h4>Phone</h4>
+                        <h4>Email</h4>
                         <p>
-                            Aaron Kratzer
-                            <br>
-                            (503) 327-9232
+                            YouCANcorvallis@gmail.com
                         </p>
                     </div>
                 </div>
@@ -375,12 +373,6 @@
                 </div>
                 <div class="contact-2">
                     <div class="contact-clmn-content">
-                        <h4>Email</h4>
-                        <p>
-                            aaronckratzer@gmail.com
-                            <br>
-                            YouCANcorvallis@gmail.com
-                        </p>
                     </div>
                 </div>
             </div>
@@ -390,15 +382,11 @@
 
     <!-- Section 5 (Footer) -->
 
-    <div class="footer">
+    <div class="footer" style="display: none;">
         <div class="footer-content">
             <div class="footer-clmn1">
-                <!--©2014 Developed by <a href="http://diogodantas.com">Diogo Dantas</a><br><br>-->
-                ©2016 Updated by Aaron Kratzer
             </div>
             <div class="footer-clmn2">
-                <!--Email: <a href="mailto:imdiogodantas@gmail.com">imdiogodantas@gmail.com</a><br><br>-->
-                Email: <a href="mailto:aaronckratzer@gmail.com">AaronCKratzer@gmail.com</a>
             </div>
         </div>
     </div>
