Updates the ordinance draft

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <h2>Corvallis GHG Reduction Ordinance</h2>
                 <p>A GHG reduction ordinance is the next step to ensure and
                     support the Corvallis Climate Action Plan.</p>
-                <a href="/static/files/CorvallisClimateRecoveryOrdinancedraft2.15.17.pdf">
+                <a href="/static/files/Ordinance draft 20170331.pdf">
                     <div class="read-more-btn">See the draft text here</div>
                 </a>
             </div>
