--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
             <div class="cd-container-people-clmn-1">
                 <img src="http://bloximages.chicago2.vip.townnews.com/gazettetimes.com/content/tncms/assets/v3/editorial/4/5f/45f3162a-c5ab-11e1-96da-0019bb2963f4/4ff3f30065cb5.preview-620.jpg">
                 <div class="cd-container-people-info">
-                    <h2>Debra Higbee-Sudyka</h2>
+                    <h2>Debra Higbee-Sudyka ***</h2> <!-- Test 1 -->
                     <p>The Chair of the Corvallis Environmental Action Team of
                         the Sierra Club, Debra has experience in local and
                         state policy making. As the main proponent of the
